infrastructure/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: backend
          image: ghcr.io/marpot/corporation_simulation_project:latest
          imagePullPolicy: IfNotPresent
          command:
            - dockerize
            - -wait
            - tcp://db:5432
            - -timeout
            - 660s
            - uvicorn
            - app.main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          ports:
            - name: http
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /docs
              port: http
            periodSeconds: 5
            failureThreshold: 144
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /docs
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
