infrastructure/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: db

spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
